--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black"
+    android:background="#000000"
     tools:context=".DetailsActivity">
 
     <TextView
@@ -12,21 +12,22 @@
         android:layout_width="198dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
-        android:text="@string/mass"
+        android:text="Mass"
         android:textAlignment="center"
-        android:textColor="@color/color1"
+        android:textColor="#9BA7EC"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/textView5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/orb_name_value"
-        app:layout_constraintVertical_bias="0.29" />
+        app:layout_constraintVertical_bias="0.29"
+        tools:ignore="HardcodedText" />
 
     <TextView
         android:id="@+id/orb_volume_value"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="@string/volume_value"
+        android:text="Volume value"
         android:textAlignment="center"
         android:textSize="12sp"
         app:layout_constraintBottom_toTopOf="@+id/textView6"
@@ -34,69 +35,74 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        tools:ignore="HardcodedText" />
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="264dp"
-        android:text="@string/surface_area"
+        android:text="Surface area"
         android:textAlignment="center"
-        android:textColor="@color/color1"
+        android:textColor="#9BA7EC"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/orb_name_value" />
+        app:layout_constraintTop_toBottomOf="@+id/orb_name_value"
+        tools:ignore="HardcodedText" />
 
     <TextView
         android:id="@+id/orb_surface_area_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
-        android:text="@string/surface_area_value"
+        android:text="Surface area value"
         android:textAlignment="center"
-        android:textSize="20sp"
+        android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+        app:layout_constraintTop_toBottomOf="@+id/textView6"
+        tools:ignore="HardcodedText" />
 
     <TextView
         android:id="@+id/orb_mean_density_value"
         android:layout_width="198dp"
         android:layout_height="wrap_content"
-        android:text="@string/mean_density_value"
+        android:text="Mean density value"
         android:textAlignment="center"
         android:textSize="12sp"
         app:layout_constraintBottom_toTopOf="@+id/textView6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5"
-        app:layout_constraintVertical_bias="0.396" />
+        app:layout_constraintVertical_bias="0.396"
+        tools:ignore="HardcodedText" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="168dp"
-        android:text="@string/volume"
+        android:text="Volume"
         android:textAlignment="center"
-        android:textColor="@color/color1"
+        android:textColor="#9BA7EC"
         android:textSize="20sp"
         app:layout_constraintEnd_toStartOf="@+id/textView5"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/orb_name_value" />
+        app:layout_constraintTop_toBottomOf="@+id/orb_name_value"
+        tools:ignore="HardcodedText" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="198dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="168dp"
-        android:text="@string/mean_density"
+        android:text="Mean density"
         android:textAlignment="center"
-        android:textColor="@color/color1"
+        android:textColor="#9BA7EC"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/orb_name_value"
@@ -107,35 +113,37 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
-        android:text="@string/gravity"
+        android:text="Gravity"
         android:textAlignment="center"
-        android:textColor="@color/color1"
+        android:textColor="#9BA7EC"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/textView4"
         app:layout_constraintEnd_toStartOf="@+id/textView3"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/orb_name_value"
-        app:layout_constraintVertical_bias="0.29" />
+        app:layout_constraintVertical_bias="0.29"
+        tools:ignore="HardcodedText" />
 
     <TextView
         android:id="@+id/orb_mass_value"
         android:layout_width="198dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="@string/mass_value"
+        android:text="Mass value"
         android:textAlignment="center"
         android:textSize="12sp"
         app:layout_constraintBottom_toTopOf="@+id/textView5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3"
-        app:layout_constraintVertical_bias="0.285" />
+        app:layout_constraintVertical_bias="0.285"
+        tools:ignore="HardcodedText" />
 
     <TextView
         android:id="@+id/orb_gravity_value"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/gravity_value"
+        android:text="Gravity value"
         android:textAlignment="center"
         android:textSize="12sp"
         app:layout_constraintBottom_toTopOf="@+id/textView4"
@@ -143,7 +151,8 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.4" />
+        app:layout_constraintVertical_bias="0.4"
+        tools:ignore="HardcodedText" />
 
     <ImageView
         android:id="@+id/orb_image_value"
@@ -161,25 +170,27 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="@string/name"
+        android:text="Name"
         android:textAlignment="center"
-        android:textColor="@color/white"
+        android:textColor="#FFFFFF"
         android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/orb_image_value" />
+        app:layout_constraintTop_toBottomOf="@+id/orb_image_value"
+        tools:ignore="HardcodedText" />
 
     <TextView
         android:id="@+id/orb_classification_value"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="@string/classification"
+        android:text="Classification"
         android:textAlignment="center"
-        android:textColor="@color/color2"
+        android:textColor="#D5D5D5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/orb_name_value" />
+        app:layout_constraintTop_toBottomOf="@+id/orb_name_value"
+        tools:ignore="HardcodedText" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
